Correct quotes around font, and add grain images, float them, and resize them

--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="en-ca">
 
 <head>
-  <title>Header Icons</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Header Icons</title>
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Grains</h1>
+      <div>
+        <h1>Grains</h1>
+        <img class="grainleft" src="images/grain-left.svg" alt="#">
+        <img class="grainright" src="images/grain-right.svg" alt="#">
+      </div>
     <nav>
       <ul class="nav">
         <li><a href="#"> Home</a></li>
